# Learn_iceberg

./: README.md
iceberg_pyspark_proj/: learn_iceberg.ipynb  pyproject.toml
iceberg_pyspark_proj/spark-warehouse/user_data/: .part-00000-248d215d-82c4-45e2-8e26-fea4e6691fb5-c000.snappy.parquet.crc  .part-00001-248d215d-82c4-45e2-8e26-fea4e6691fb5-c000.snappy.parquet.crc  part-00000-248d215d-82c4-45e2-8e26-fea4e6691fb5-c000.snappy.parquet  part-00001-248d215d-82c4-45e2-8e26-fea4e6691fb5-c000.snappy.parquet
