[project]
name = "learn-iceberg"
version = "0.1.0"
description = ""
authors = [
    {name = "AVUTHU SIVA VARDHANA REDDY",email = "53142715+avuthusiva@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyspark = "^4.0.0"
ipykernel = "^6.29.5"

